# Agents

./: AGENT_COMPARISON_REPORT_RU.md
cold-outreach-agent/: .env  .env.example  README.md  pyproject.toml  sample_leads.csv  test_mcp.py
cold-outreach-agent/ai_docs/: cold_outreach_agent.md
cold-outreach-agent/data/: leads.csv  leads2.csv  leads_test.csv  results.json  results2.json
cold-outreach-agent/nbooks/: analysis.ipynb
cold-outreach-agent/scripts/: run.sh
cold-outreach-agent/src/: __init__.py  pipeline.py  prompts.py  run.py  tools.py
outreach_orchestrator/: .env.example  .gitignore  CLASSIFICATION_UPDATE.md  COMPRESSION_FIX.md  CONFIGURATION.md  MULTI_AGENT.md  README.md  TESTING.md  check_openai_tier.py  config.json  mcp_config.json  pyproject.toml  test_rate_limiting.py  test_run.sh
outreach_orchestrator/agents/: researcher.md  reviewer.md  writer.md
outreach_orchestrator/docs/: RATE_LIMITING.md
outreach_orchestrator/notebooks/: analysis.ipynb  pyproject.toml
outreach_orchestrator/scripts/: run.sh
outreach_orchestrator/src/: __init__.py  agent_loader.py  agent_orchestrator.py  agent_wrapper.py  classification.py  config_loader.py  context_loader.py  logger.py  orchestrator.py  rate_limiter.py  result_writer.py  run.py  task_queue.py  worker_pool.py
plan_mcp_agent/: .env.example  .gitignore  README.md  detailed_analysis.md  lavanda_company_analysis.md  lavanda_company_profile.md  main.py  pov_email_scott_craig.md  pov_framework_email_scott_craig.md  pyproject.toml  scott_craig_analysis.txt
plan_mcp_agent/docs/: ARCHITECTURE.md  DEEPSEEK.md  QUICKSTART.md
plan_mcp_agent/examples/: basic_usage.py  deepseek_usage.py  full_mcp_config.py  mcp_config.json  with_mcp.py
plan_mcp_agent/plan_mcp_agent/: __init__.py  agent.py  graph.py
plan_mcp_agent/plan_mcp_agent/agents/: __init__.py  executor.py  planner.py  replanner.py
plan_mcp_agent/plan_mcp_agent/mcp/: __init__.py  client.py
plan_mcp_agent/plan_mcp_agent/tools/: __init__.py  os_tools.py
plan_mcp_agent/scripts/: run.sh
pov-gen-agent/: .env.example  .gitignore  README.md  batch_main.py  batch_summary.json  leads.json  main.py  pyproject.toml
pov-gen-agent/data/: leads.json
pov-gen-agent/docs/: example.md  gtm_manifest.md  pov_framework.md  workflow.md
pov-gen-agent/output/: anas_samran_1.json  angie_rai_2.json  john_gniadek_3.json
pov-gen-agent/scripts/: run.sh
pov-gen-agent/src/pov_gen_agent/: __init__.py  batch_processor.py  config.py  graph.py  (+1 more)
(+4 files in other folders)
